<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainMenuActivity">

    <ImageView
        android:id="@+id/imgBackGround"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/description_background_image"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/udimalogin_768" />

    <ImageView
        android:id="@+id/imgLogoUdimaHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:contentDescription="@string/description_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_udima_head" />

    <TextView
        android:id="@+id/signUpPageTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:background="@color/udima_green"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoUdimaHead" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="10dp">

        <Button
            android:id="@+id/welcomeSignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_border"
            android:text="@string/sign_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/welcomeSignUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/welcomeSignInButton"
            android:layout_centerInParent="true"
            android:background="@drawable/button_border"
            android:text="@string/sign_up"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/white" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>